# EmployeeManagementSystem

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: app.py  db.py  employee_service.py  settings.py
src/employee_management_system/: __init__.py  __main__.py
src/employee_management_system/api/: dependencies.py  main.py  routes.py  schemas.py
src/employee_management_system/cli/: __init__.py  app.py
src/employee_management_system/config/: __init__.py  settings.py
src/employee_management_system/domain/: __init__.py  employee.py
src/employee_management_system/services/: __init__.py  employee_service.py
src/employee_management_system/storage/: __init__.py  postgres_store.py
tests/: conftest.py  test_api.py  test_app.py  test_db.py  test_employee.py  test_employee_service.py
