[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "employee-management-system"
version = "0.1.0"
description = "Employee management CLI with leave and payroll rules."
readme = "README.md"
requires-python = "==3.10.*"
authors = [{ name = "Employee Management Team" }]
dependencies = [
  "psycopg[binary]>=3.2.0",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
  "black>=24.0.0",
  "mypy>=1.8.0",
  "pytest>=8.0.0",
  "ruff>=0.6.0",
]

[project.scripts]
employee-cli = "employee_management_system.cli.app:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["employee_management_system*"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.10"
mypy_path = "src"
check_untyped_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_optional = true
pretty = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
